# Fractals3D

./: .gitignore  CMakeLists.txt  README.md  image.hdr  image.tga  imgui.ini
glsl/: apollonian1_pixel.glsl  apollonian2_pixel.glsl  apollonian3_pixel.glsl  equirectangular_to_cubemap_pixel.glsl  equirectangular_to_cubemap_vertex.glsl  get_irradiance_pixel.glsl  get_irradiance_vertex.glsl  julia1_pixel.glsl  julia2_pixel.glsl  julia3_pixel.glsl  julia4_pixel.glsl  julia_pixel.glsl  juliabulb_pixel.glsl  mandelbulb_pixel.glsl  menger_sponge1_pixel.glsl  menger_sponge2_pixel.glsl  menger_sponge3_pixel.glsl  monster_pixel.glsl  quad_pixel.glsl  quad_vertex.glsl  sierpinski1_pixel.glsl  sierpinski2_pixel.glsl
include/: camera.h  errors.h  fractalController.h  framebuffer.h  gui.h  inputSystem.h  renderer.h  shaderProgram.h  skybox.h  texture.h  types.h  window.h
parameters/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  parameters.json
src/: camera.cpp  fractalController.cpp  framebuffer.cpp  gui.cpp  inputSystem.cpp  main.cpp  renderer.cpp  shaderProgram.cpp  skybox.cpp  texture.cpp  window.cpp
textures/HDR/TropicalBeach/: Tropical_Beach.ibl
